feat: add application annotation and booking fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BookingApp</string>
+    <string name="booking_fragment_label">BookingApp</string>
+    <string name="booking_fragment_scan_now">Scan now</string>
 </resources>
