--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BookingApp</string>
     <string name="booking_fragment_label">BookingApp</string>
     <string name="booking_fragment_scan_now">Scan now</string>
+    <string name="scanner_error">%s</string>
 </resources>
